bucket-notification/bucket-notification-handler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucket-notification-handler
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: bucket-notification-handler
  template:
    metadata:
      labels:
        app: bucket-notification-handler 
    spec:
      containers:
        - name: bucket-notification-handler
          image: quay.io/noeloc/bucket-notification-handler
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: bucket-notification-handler-svc
spec:
  selector:
    app: bucket-notification-handler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
